Vectorization of a filter stage without a filter expression fails to switch to scalar

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2024-02-19
    • 144
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a $match has an expression that, when compiled, leads to an empty filter, we don't check if the caller is able to process block values

       db.repro.explain().aggregate([{$project: {"obj.obj": 1}}, {$match: {$or: [{"hidden": {$bitsAnySet: NumberInt(6)}}, {$expr: {$literal: true}}]}}, {$sort: {_id: 1}},  {$group: {_id: null}}])
      

            Assignee:
            Alberto Massari
            Reporter:
            Alberto Massari
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: