SERVER-86347 $match closes vector processing if caller doesn't support it (#18784)

GitOrigin-RevId: 688e4a2a05f76934baa3b6c16c185841cfb01c98